# backend-sra

./: dependencies.py  main.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  seed.py  tsconfig.tsbuildinfo
api/v1/: equiments.py  formules.py  product_types.py  products.py  reservations.py  room_images.py  room_types.py  rooms.py  services.py  user.py  utils.py
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/booking/: page.tsx
app/chambres/[id]/: page.tsx
app/check-in/[reference]/: page.tsx
app/conciergerie/: page.tsx
app/connexion/: page.tsx
app/dashboard/: page.tsx
app/dashboard/admin/: page.tsx
app/dashboard/commandes/: page.tsx
app/dashboard/menage/: page.tsx
app/dashboard/reception/: page.tsx
app/inscription/: page.tsx
app/mes-reservations/: page.tsx
app/panier/: page.tsx
app/profil/: page.tsx
app/recherche/: page.tsx
app/reservation/: page.tsx
app/reservations/[reference]/: page.tsx
app/room-service/: page.tsx
auth/: auth_utils.py  token.py
components/home/: BookingStrip.tsx  Events.tsx  Hero.tsx  ReservationSection.tsx  Restaurant.tsx  Rooms.tsx  Services.tsx  Spa.tsx
components/layout/: Footer.tsx  Navbar.tsx
core/: config.py
lib/: api.ts  auth-context.tsx  cart-context.tsx  mock-data.ts  mock-rooms.ts
models/: db.py  models.py  repository.py
services/: email_service.py
templates/reservations/: payment_receipt.html  reservation_confirmed.html  reservation_pending.html
