[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=40.23.0",
    "fastapi[standard]>=0.138.0",
    "jose>=1.0.0",
    "passlib>=1.7.4",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "sqlmodel>=0.0.38",
]

[tool.fastapi]
entrypoint = "main:app"
